--- a/app/views/layouts/_accommodation_item.html.erb
+++ b/app/views/layouts/_accommodation_item.html.erb
@@ -90,7 +90,7 @@
           <a href="#camps" class="back">Back to Camp Selection</a>
           </div>
           <div class="col-xs-12">
-            <a type="button" class="btn btn-enquire btn-custom" data-toggle="modal" data-target="#myModal">Enquire Now</a>
+            <a href="#contact_area" class="btn btn-enquire btn-custom">Enquire Now</a>
             <!-- Modal -->
             <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
               <div class="modal-dialog" role="document">
