--- a/app/views/layouts/locations.html.erb
+++ b/app/views/layouts/locations.html.erb
@@ -92,7 +92,7 @@
                 <%=raw @location.description %>
             </div>
             <div class="col-xs-12">
-              <a type="button" class="btn btn-enquire btn-custom" data-toggle="modal" data-target="#myModal">Enquire Now</a>
+              <a href="#contact_area" class="btn btn-enquire btn-custom">Enquire Now</a>
               <!-- Modal -->
               <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                 <div class="modal-dialog" role="document">
@@ -304,7 +304,7 @@
               <%= raw(@location.description) %>
             </div>
             <div class="col-xs-12">
-              <a type="button" class="btn btn-enquire btn-custom" data-toggle="modal" data-target="#myModal">Enquire Now</a>
+              <a href="#contact_area" class="btn btn-enquire btn-custom">Enquire Now</a>
               <!-- Modal -->
               <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                 <div class="modal-dialog" role="document">
