--- a/app/views/refinery/_footer.html.erb
+++ b/app/views/refinery/_footer.html.erb
@@ -62,7 +62,7 @@
             :css => 'list list-inline hidden-xs'
         }) %>
         <img src="/assets/bottom-logo.gif" class="logo">
-        <a href="https://www.caa.co.uk/atol-protection/" target="_blank"><img src="/assets/atol.gif"></a>
+        <a href="https://www.caa.co.uk/atol-protection/" target="_blank" class="hidden-xs"><img src="/assets/atol.gif"></a>
         <div class="copyright">
           © Tailormade Africa &bull; All Rights Reserved &bull; <a href="http://www.perfectcircle.co.za" target="_blank">Website by Perfect Circle.</a><br/>
           <a href="/terms-conditions">Terms & Conditions</a> &bull; <a href="/bookings/new">Booking Form</a> &bull; <a href="/accommodations">Accommodation</a> &bull; <a href="/consumer-financial-protection">Consumer Financial Protection</a>
