--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -11,7 +11,7 @@
               <h2>Discover</h2>
             <% end %>
             <h1><%= raw @location.name %></h1>
-            <a href="#contact_area"><img src="/assets/banner-btn.png"></a>
+            <a href="#contact_area" class="hidden-xs"><img src="/assets/banner-btn.png"></a>
           </div>
           <img src="/assets/blank.gif" data-src="/assets/downarrow.png" class="ms-layer arrow hidden-xs hidden-sm" data-resize="false" data-type="image" data-delay="1500" data-duration="9000" data-ease="easeOutExpo" data-resize="false">
         </div>
@@ -29,7 +29,7 @@
           <div class="ms-layer banner-text" data-type="text" data-delay="750" data-duration="2000" data-ease="easeOutExpo" data-resize="false">
             <h2>Visit</h2>
             <h1><%= raw @accommodation.name %></h1>
-            <a href="#contact_area"><img src="/assets/banner-btn.png"></a>
+            <a href="#contact_area" class="hidden-xs"><img src="/assets/banner-btn.png"></a>
           </div>
           <img src="/assets/blank.gif" data-src="/assets/downarrow.png" class="ms-layer arrow hidden-xs hidden-sm" data-resize="false" data-type="image" data-delay="1500" data-duration="9000" data-ease="easeOutExpo" data-resize="false">
         </div>
@@ -46,7 +46,7 @@
           <div class="ms-layer banner-text" data-type="text" data-delay="750" data-duration="2000" data-ease="easeOutExpo" data-resize="false">
             <h2>Experience</h2>
             <h1><%= raw @activity.name %></h1>
-            <a href="#contact_area"><img src="/assets/banner-btn.png"></a>
+            <a href="#contact_area" class="hidden-xs"><img src="/assets/banner-btn.png"></a>
           </div>
           <img src="/assets/blank.gif" data-src="/assets/downarrow.png" class="ms-layer arrow hidden-xs hidden-sm" data-resize="false" data-type="image" data-delay="1500" data-duration="9000" data-ease="easeOutExpo" data-resize="false">
         </div>
@@ -156,7 +156,7 @@
             <% elsif banner.description.present? %>
               <div class="ms-layer banner-text" data-type="text" data-delay="750" data-duration="2000" data-ease="easeOutExpo" data-resize="false">
                 <%= raw banner.description %>
-                <a href="#contact_area"><img src="/assets/banner-btn.png"></a>
+                <a href="#contact_area" class="hidden-xs"><img src="/assets/banner-btn.png"></a>
               </div>
             <% end %>
             <img src="/assets/blank.gif" data-src="/assets/downarrow.png" class="ms-layer arrow hidden-xs hidden-sm" data-resize="false" data-type="image" data-delay="1500" data-duration="9000" data-ease="easeOutExpo" data-resize="false">
