--- a/app/views/layouts/locations.html.erb
+++ b/app/views/layouts/locations.html.erb
@@ -19,11 +19,11 @@
           <div class="row">
             <div class="col-xs-12 div1">
               <h1>Search Results for: <%= params[:search] %></h1>
-              <% if @all_locations.present? or @all_accommodations.present? %>
-                <% if @all_locations.present? %>
+              <% if @all_location_items.present? or @all_accommodation_items.present? %>
+                <% if @all_location_items.present? %>
                   <h2>Destination</h2>
                   <ul class=" list-inline list-unstyled cf">
-                    <% @all_locations.each do |location| %>
+                    <% @all_location_items.each do |location| %>
                       <li class="search-item">
                         <%= link_to(image_fu(location.cover_image, "105x80#c", :alt => location.cover_image.alt_tag),refinery.locations_location_path(location)) if location.cover_image.present? %>
                         <div class="search-item-body">
@@ -35,10 +35,10 @@
                   </ul>
                 <% end %>
                 <div class="clear"></div>
-                <% if @all_accommodations.present? %>
+                <% if @all_accommodation_items.present? %>
                   <h2>Accommodation</h2>
                   <ul class=" list-inline list-unstyled cf">
-                    <% @all_accommodations.each do |accommodation| %>
+                    <% @all_accommodation_items.each do |accommodation| %>
                       <% if accommodation.is_valid? %>
                         <li class="search-item">    
                           <%= link_to(image_fu(accommodation.cover_image, "105x80#c", :alt => accommodation.cover_image.alt_tag),refinery.accommodations_accommodation_path(accommodation)) if accommodation.cover_image.present? %>               
