--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -219,6 +219,12 @@ strong {font-weight:500;}
     h1 {color:#ffffff; background:url(/assets/bg-h1.gif) bottom center no-repeat; padding-bottom:25px; margin:0;}
     p {margin:25px 0 10px 0;}
     .form-control {color:#ffffff; background:transparent; border:0; border-radius:0; border-bottom:1px solid rgba(255,255,255,0.5); box-shadow:none; padding:25px 0; line-height:34px;}
+    .currency-selector {position: absolute; left: 0; top: 0; width: 100%; height: 100%; padding-left: .5rem; border: 0; background: transparent; -webkit-appearance:none;-moz-appearance:none; appearance:none; background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='1024' height='640'><path d='M1017 68L541 626q-11 12-26 12t-26-12L13 68Q-3 49 6 24.5T39 0h952q24 0 33 24.5t-7 43.5z'></path></svg>") 90%/12px 6px no-repeat; font-family: inherit; color: inherit;}
+    .currency-amount {text-align: right;}
+    .currency-addon {width: 6em; text-align: left; position: relative;}
+    .currency-label {padding: 6px 30px 6px 0;}
+    .currency-amount {padding: 6px 50px 6px 0;}
+    .input-group-addon {font-weight: 300; color: #fff; text-align: left; background-color: transparent; border:0; border-bottom: 1px solid rgba(255,255,255,0.5); border-radius: 0;}
     textarea {padding:15px 0!important;}
     .option-group {padding:20px 0; border-bottom:1px solid rgba(255,255,255,0.5);
       label {font-weight:300; float:left; line-height:15px;  margin:0;}
@@ -277,7 +283,7 @@ strong {font-weight:500;}
     .link {background: #000; color: #fff; height: 38px; display: inline-block; width: 150px; text-align: center; line-height: 38px;}
     select {height: 43px; border: none; font-size: 13px; padding: 0 4px;}
   }
-  .captcha {background: url(/assets/captcha.png) top center no-repeat; height:44px;}
+  .captcha {background: url(/assets/captcha-booking.png) top center no-repeat; height:44px;}
   .btn-custom {margin:0 0 20px 0!important;}
 }
 
