--- a/app/views/refinery/_footer.html.erb
+++ b/app/views/refinery/_footer.html.erb
@@ -10,13 +10,13 @@
           <input type="text" name="inquiry[phone]" class="form-control" placeholder="Phone*" required>
           <input type="text" name="inquiry[destination]" class="form-control" placeholder="Travel Destination*" required>
           <!--<input type="text" name="inquiry[budget]" class="form-control" placeholder="Budget*" required>-->
-          <div class="input-group mb-2 mr-sm-2 mb-sm-0">
-            <span class="input-group-addon currency-label">Budget*</span><div class="input-group-addon currency-symbol">$</div>
-            <input type="text" class="form-control currency-amount" id="inlineFormInputGroup" placeholder="0.00" size="8">
+          <div class="input-group">
+            <span class="input-group-addon currency-label">Budget*</span>
+            <input type="text" class="form-control currency-amount">
             <div class="input-group-addon currency-addon">
               <select class="currency-selector">
-                <option data-symbol="$" data-placeholder="0.00" selected>USD</option>
-                <option data-symbol="£" data-placeholder="0.00">GBP</option>
+                <option selected>USD</option>
+                <option>GBP</option>
               </select>
             </div>
           </div>
