--- a/app/views/layouts/locations.html.erb
+++ b/app/views/layouts/locations.html.erb
@@ -359,7 +359,7 @@
         <% accommodations = @location.accommodations %>
         <% if accommodations.present? %>
           <div class="accommodations" style="margin-top:-50px;">
-            <div clas="container">
+            <div class="container">
               <div class="row">
                 <div class="col-xs-12">
                   <h2 class="slider" id="camps">Explore the camps below</h2>
