--- a/app/views/refinery/_header.html.erb
+++ b/app/views/refinery/_header.html.erb
@@ -29,7 +29,7 @@
         <li><a href="<%= face %>" target="_blank"><img alt="facebook" title="facebook" src="/assets/facebook.png"></a></li>
         <li><a href="<%= twit %>" target="_blank"><img alt="twitter" title="twitter" src="/assets/twitter.png"></a></li>
         <li><a href="<%= ins %>" target="_blank"><img alt="instagram" title="instagram" src="/assets/instagram.png"></a></li>
-        <li class="hidden-xs"><a href="tel:<%= number %>"><img src="/assets/phone.png"><%= number %></a></li>
+        <li class="hidden-xs"><a href="tel:<%= number %>"><img src="/assets/phone.png" class="hidden-sm"><%= number %></a></li>
       </ul>
     </div>
 
