--- a/app/views/refinery/_footer.html.erb
+++ b/app/views/refinery/_footer.html.erb
@@ -4,7 +4,7 @@
       <div class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
         <form accept-charset="UTF-8" action="/contact" method="post">
           <h1>Get In Touch</h1>
-          <p>Whether you are a seasoned Africa traveller or thinking about visiting<br/>the continent for the first time, we would love to speak to you.</p>
+          <p>Whether you are a seasoned Africa traveller or thinking about visiting the continent for the first time, we would love to hear from you.<br/>Speak to an expert at +44 7809 726266 (Clyde) or +44 7791 360170 (Rob) or fill in the contact form below.</p>
           <input type="text" name="inquiry[name]" class="form-control" placeholder="Name*" required>
           <input type="email" name="inquiry[email]" class="form-control" placeholder="Email*" required>
           <input type="text" name="inquiry[phone]" class="form-control" placeholder="Phone*" required>
