--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,20 +1,20 @@
 <% if @location.present? and @location.gallery.present? and @location.gallery.items.present? %>
   <div class="master-slider ms-skin-default" id="masterslider">
-    <div class="search hidden-xs hidden-sm">
+    <div class="search hidden-xs">
       <div class="container">
         <div class="row">
           <div class="col-xs-12">
             <form accept-charset="UTF-8" action="/locations" method="get" class="form-inline">
-              <div class="col-xs-12 col-md-2">
+              <div class="col-xs-12 col-sm-3 col-md-2">
                 <div class="title">
                   <span>Find your</span>
                   <h2>Destination</h2>
                 </div>
               </div>
-              <div class="col-xs-12 col-md-8">
+              <div class="col-xs-12 col-sm-6 col-md-8">
                 <input type="text" name="search" class="form-control" placeholder="Search ...">
               </div>
-              <div class="col-xs-12 col-sm-2">
+              <div class="col-xs-12 col-sm-3 col-md-2">
                 <input type="submit" class="btn btn-custom" value="Search">
               </div>
             </form>
@@ -42,21 +42,21 @@
   </div>
 <% elsif @accommodation.present? and @accommodation.gallery.present? and @accommodation.gallery.items.present? %>
   <div class="master-slider ms-skin-default" id="masterslider">
-    <div class="search hidden-xs hidden-sm">
+    <div class="search hidden-xs">
       <div class="container">
         <div class="row">
           <div class="col-xs-12">
             <form accept-charset="UTF-8" action="/locations" method="get" class="form-inline">
-              <div class="col-xs-12 col-md-2">
+              <div class="col-xs-12 col-sm-3 col-md-2">
                 <div class="title">
                   <span>Find your</span>
                   <h2>Destination</h2>
                 </div>
               </div>
-              <div class="col-xs-12 col-md-8">
+              <div class="col-xs-12 col-sm-6 col-md-8">
                 <input type="text" name="search" class="form-control" placeholder="Search ...">
               </div>
-              <div class="col-xs-12 col-sm-2">
+              <div class="col-xs-12 col-sm-3 col-md-2">
                 <input type="submit" class="btn btn-custom" value="Search">
               </div>
             </form>
@@ -82,21 +82,21 @@
   </div>
 <% elsif @activity.present? and @activity.gallery.present? and @activity.gallery.items.present? %>
   <div class="master-slider ms-skin-default" id="masterslider">
-    <div class="search hidden-xs hidden-sm">
+    <div class="search hidden-xs">
       <div class="container">
         <div class="row">
           <div class="col-xs-12">
             <form accept-charset="UTF-8" action="/locations" method="get" class="form-inline">
-              <div class="col-xs-12 col-md-2">
+              <div class="col-xs-12 col-sm-3 col-md-2">
                 <div class="title">
                   <span>Find your</span>
                   <h2>Destination</h2>
                 </div>
               </div>
-              <div class="col-xs-12 col-md-8">
+              <div class="col-xs-12 col-sm-6 col-md-8">
                 <input type="text" name="search" class="form-control" placeholder="Search ...">
               </div>
-              <div class="col-xs-12 col-sm-2">
+              <div class="col-xs-12 col-sm-3 col-md-2">
                 <input type="submit" class="btn btn-custom" value="Search">
               </div>
             </form>
@@ -121,21 +121,21 @@
   </div>
 <% elsif @post.present? and @post.banners.published.present? %>
   <div class="master-slider ms-skin-default" id="post_masterslider">
-    <div class="search hidden-xs hidden-sm">
+    <div class="search hidden-xs">
       <div class="container">
         <div class="row">
           <div class="col-xs-12">
             <form accept-charset="UTF-8" action="/locations" method="get" class="form-inline">
-              <div class="col-xs-12 col-md-2">
+              <div class="col-xs-12 col-sm-3 col-md-2">
                 <div class="title">
                   <span>Find your</span>
                   <h2>Destination</h2>
                 </div>
               </div>
-              <div class="col-xs-12 col-md-8">
+              <div class="col-xs-12 col-sm-6 col-md-8">
                 <input type="text" name="search" class="form-control" placeholder="Search ...">
               </div>
-              <div class="col-xs-12 col-sm-2">
+              <div class="col-xs-12 col-sm-3 col-md-2">
                 <input type="submit" class="btn btn-custom" value="Search">
               </div>
             </form>
@@ -158,21 +158,21 @@
   </div>
 <% elsif @page.link_url.present? and @page.link_url == '/blog' and @page.present? and @page.banners.published.present? %>
   <div class="master-slider ms-skin-default" id="post_masterslider">
-    <div class="search hidden-xs hidden-sm">
+    <div class="search hidden-xs">
       <div class="container">
         <div class="row">
           <div class="col-xs-12">
             <form accept-charset="UTF-8" action="/locations" method="get" class="form-inline">
-              <div class="col-xs-12 col-md-2">
+              <div class="col-xs-12 col-sm-3 col-md-2">
                 <div class="title">
                   <span>Find your</span>
                   <h2>Destination</h2>
                 </div>
               </div>
-              <div class="col-xs-12 col-md-8">
+              <div class="col-xs-12 col-sm-6 col-md-8">
                 <input type="text" name="search" class="form-control" placeholder="Search ...">
               </div>
-              <div class="col-xs-12 col-sm-2">
+              <div class="col-xs-12 col-sm-3 col-md-2">
                 <input type="submit" class="btn btn-custom" value="Search">
               </div>
             </form>
@@ -194,21 +194,21 @@
   </div>
 <% elsif @post.present? and @post.banners.published.present? %>
   <div class="master-slider ms-skin-default" id="post_masterslider">
-    <div class="search hidden-xs hidden-sm">
+    <div class="search hidden-xs">
       <div class="container">
         <div class="row">
           <div class="col-xs-12">
             <form accept-charset="UTF-8" action="/locations" method="get" class="form-inline">
-              <div class="col-xs-12 col-md-2">
+              <div class="col-xs-12 col-sm-3 col-md-2">
                 <div class="title">
                   <span>Find your</span>
                   <h2>Destination</h2>
                 </div>
               </div>
-              <div class="col-xs-12 col-md-8">
+              <div class="col-xs-12 col-sm-6 col-md-8">
                 <input type="text" name="search" class="form-control" placeholder="Search ...">
               </div>
-              <div class="col-xs-12 col-sm-2">
+              <div class="col-xs-12 col-sm-3 col-md-2">
                 <input type="submit" class="btn btn-custom" value="Search">
               </div>
             </form>
@@ -229,21 +229,21 @@
   </div>
 <% elsif @page.link_url.present? and @page.link_url == '/blog' and @page.present? and @page.banners.published.present? %>
   <div class="master-slider ms-skin-default" id="post_masterslider">
-    <div class="search hidden-xs hidden-sm">
+    <div class="search hidden-xs">
       <div class="container">
         <div class="row">
           <div class="col-xs-12">
             <form accept-charset="UTF-8" action="/locations" method="get" class="form-inline">
-              <div class="col-xs-12 col-md-2">
+              <div class="col-xs-12 col-sm-3 col-md-2">
                 <div class="title">
                   <span>Find your</span>
                   <h2>Destination</h2>
                 </div>
               </div>
-              <div class="col-xs-12 col-md-8">
+              <div class="col-xs-12 col-sm-6 col-md-8">
                 <input type="text" name="search" class="form-control" placeholder="Search ...">
               </div>
-              <div class="col-xs-12 col-sm-2">
+              <div class="col-xs-12 col-sm-3 col-md-2">
                 <input type="submit" class="btn btn-custom" value="Search">
               </div>
             </form>
@@ -264,21 +264,21 @@
   </div>
 <% elsif @page.link_url.present? and @page.link_url == '/bookings/new' and @page.present? and @page.banners.published.present? %>
   <div class="master-slider ms-skin-default" id="post_masterslider">
-    <div class="search hidden-xs hidden-sm">
+    <div class="search hidden-xs">
       <div class="container">
         <div class="row">
           <div class="col-xs-12">
             <form accept-charset="UTF-8" action="/locations" method="get" class="form-inline">
-              <div class="col-xs-12 col-md-2">
+              <div class="col-xs-12 col-sm-3 col-md-2">
                 <div class="title">
                   <span>Find your</span>
                   <h2>Destination</h2>
                 </div>
               </div>
-              <div class="col-xs-12 col-md-8">
+              <div class="col-xs-12 col-sm-6 col-md-8">
                 <input type="text" name="search" class="form-control" placeholder="Search ...">
               </div>
-              <div class="col-xs-12 col-sm-2">
+              <div class="col-xs-12 col-sm-3 col-md-2">
                 <input type="submit" class="btn btn-custom" value="Search">
               </div>
             </form>
@@ -300,21 +300,21 @@
 
 <% elsif @page.present? and @page.banners.published.present? %>
   <div class="master-slider ms-skin-default" id="masterslider">
-    <div class="search hidden-xs hidden-sm">
+    <div class="search hidden-xs">
       <div class="container">
         <div class="row">
           <div class="col-xs-12">
             <form accept-charset="UTF-8" action="/locations" method="get" class="form-inline">
-              <div class="col-xs-12 col-md-2">
+              <div class="col-xs-12 col-sm-3 col-md-2">
                 <div class="title">
                   <span>Find your</span>
                   <h2>Destination</h2>
                 </div>
               </div>
-              <div class="col-xs-12 col-md-8">
+              <div class="col-xs-12 col-sm-6 col-md-8">
                 <input type="text" name="search" class="form-control" placeholder="Search ...">
               </div>
-              <div class="col-xs-12 col-sm-2">
+              <div class="col-xs-12 col-sm-3 col-md-2">
                 <input type="submit" class="btn btn-custom" value="Search">
               </div>
             </form>
