--- a/app/views/layouts/locations.html.erb
+++ b/app/views/layouts/locations.html.erb
@@ -19,7 +19,7 @@
           <div class="row">
             <div class="col-xs-12 div1">
               <h1>Search Results for: <%= params[:search] %></h1>
-              <% if @all_location_items.present? or @all_accommodation_items.present? %>
+              <% if @all_location_items.present? or @all_accommodation_items.present? or @all_activity_items.present? %>
                 <% if @all_location_items.present? %>
                   <h2>Destination</h2>
                   <ul class=" list-inline list-unstyled cf">
@@ -48,6 +48,20 @@
                           </div>
                         </li>
                       <% end %>
+                    <% end %>
+                  </ul>
+                <% end %>
+                <% if @all_activity_items.present? %>
+                  <h2>Experiences</h2>
+                  <ul class=" list-inline list-unstyled cf">
+                    <% @all_activity_items.each do |activity| %>
+                        <li class="search-item">
+                          <%= link_to(image_fu(activity.image, "80x80#c", :alt => activity.image.alt_tag),refinery.activities_activity_path(activity)) if activity.image.present? %>
+                          <div class="search-item-body">
+                            <h3><%= link_to strip_tags(activity.name), refinery.activities_activity_path(activity) %></h3>
+                            <div class="description"><%=raw truncate(activity.description, :length => 120) %></div>
+                          </div>
+                        </li>
                     <% end %>
                   </ul>
                 <% end %>
