--- a/app/views/refinery/_head.html.erb
+++ b/app/views/refinery/_head.html.erb
@@ -41,7 +41,7 @@
 
   <%= javascript_include_tag 'modernizr-min' %>
 
-  <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+  <script type="text/javascript" src="//w.sharethis.com/button/buttons.js"></script>
   <script type="text/javascript">stLight.options({publisher: "cef80a77-07e3-4913-804d-0d3aef60ac1f", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
   <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
   <!--<script src="http://code.jquery.com/jquery.js"></script>-->
