--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -143,7 +143,22 @@
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <a href="#contact_area" class="btn btn-custom">Enquire Now</a>
+          <a id="myBtn" class="btn btn-custom">Newsletter Sign Up</a>
+          <div id="myModal" class="modal">
+            <div class="modal-content">
+              <h3>Receive News & Offers from Tailormade Africa</h3>
+              <form>
+                <input class="form-control" placeholder="Enter your email address">
+                <a href="#" class="btn btn-custom">SUBMIT</a>
+              </form>
+              <span class="close">&times;</span>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-xs-12">
+                <a href="#contact_area" class="btn btn-custom">Enquire Now</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
