--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -194,7 +194,7 @@ strong {font-weight:500;}
     p {font-size:12px; line-height:20px; color:#666666; margin-bottom:10px;}
     a {color:$color;}
   }
-  .btn-custom,.btn-custom:hover {@include button ();}
+  .btn-custom,.btn-custom:hover {@include button (); width:230px!important;}
 }
 
 .recent-blogs {background:#ededed; padding:50px 0 30px 0; text-align:center;
@@ -455,6 +455,79 @@ strong {font-weight:500;}
   .bottom {padding:40px 0!important;
     h1 {margin:0 0 30px 0!important;}
   }
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.7); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  text-align:center;
+    background-color: rgba(0,0,0,0.8);
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: none;
+    width: 450px; /* Could be more or less, depending on screen size */
+    height:450px;
+    padding:50px 70px;
+    border-radius:100%;
+    h3 {color:#ffffff; font-size:29px; line-height:32px;}
+    .btn-custom,.btn-custom:hover  {
+    height: 45px;
+    line-height: 45px;
+    color: #ffffff;
+    background: transparent;
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    margin-top: 30px;
+    padding: 0 40px;
+    border-radius: 100px;
+    font-weight: 300;
+    font-size:14px;
+    margin-bottom:30px;}
+    .form-control {
+      text-align:center;
+    color: #ffffff;
+    background: transparent;
+    border: 0;
+    border-radius: 0;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+    box-shadow: none;
+    padding: 25px 0;
+    line-height: 34px;}
+      ::-webkit-input-placeholder { color:rgba(255, 255, 255, 0.6); font-weight:300;}
+      ::-moz-placeholder { color:rgba(255, 255, 255, 0.6); font-weight:300;}
+      :-ms-input-placeholder { color:rgba(255, 255, 255, 0.6); font-weight:300;}
+      :-moz-placeholder { color:rgba(255, 255, 255, 0.6);  font-weight:300;}
+}
+
+/* The Close Button */
+.close {
+    color: #fff;
+    font-size: 28px;
+    font-weight: normal;
+    text-shadow:none;
+    color: #fff;
+    width: 100%;
+    opacity: 1;
+}
+
+.close:hover,
+.close:focus {
+    color: #aaa;
+    text-decoration: none;
+    cursor: pointer;
+    font-weight: normal;
+}
 
 /*** xs ***/
 
