--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -451,59 +451,20 @@ strong {font-weight:500;}
 .best {text-align: center; background: #f4f4f4;
   ul {margin:0;}
 }
-  .top {padding: 20px 0 0 0!important;}
-  .bottom {padding:40px 0!important;
-    h1 {margin:0 0 30px 0!important;}
-  }
-
-/* The Modal (background) */
-.modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.7); /* Black w/ opacity */
+.top {padding: 20px 0 0 0!important;}
+.bottom {padding:40px 0!important;
+  h1 {margin:0 0 30px 0!important;}
 }
 
-/* Modal Content/Box */
-.modal-content {
-  text-align:center;
-    background-color: rgba(0,0,0,0.8);
-    margin: 15% auto; /* 15% from the top and centered */
-    padding: 20px;
-    border: none;
-    width: 450px; /* Could be more or less, depending on screen size */
-    height:450px;
-    padding:50px 70px;
-    border-radius:100%;
-    h3 {color:#ffffff; font-size:29px; line-height:32px;}
-    .btn-custom,.btn-custom:hover  {
-    height: 45px;
-    line-height: 45px;
-    color: #ffffff;
-    background: transparent;
-    border: 1px solid rgba(255, 255, 255, 0.5);
-    margin-top: 30px;
-    padding: 0 40px;
-    border-radius: 100px;
-    font-weight: 300;
-    font-size:14px;
-    margin-bottom:30px;}
-    .form-control {
-      text-align:center;
-    color: #ffffff;
-    background: transparent;
-    border: 0;
-    border-radius: 0;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
-    box-shadow: none;
-    padding: 25px 0;
-    line-height: 34px;}
+.modal {display: none; position: fixed; z-index: 1; left: 0; top: 0; width: 100%; height: 100%; overflow: auto; background-color: rgb(0,0,0); background-color: rgba(0,0,0,0.7); }
+.modal-content {text-align:center; background-color: rgba(0,0,0,0.8); margin: 15% auto; padding: 20px; border: none; width: 450px; height:450px; padding:50px 70px; border-radius:100%;
+ h3 {color:#ffffff; font-size:29px; line-height:32px;}
+    #mc_embed_signup .button,#mc_embed_signup .button:hover  {height: 45px; line-height: 45px; color: #ffffff; background: transparent; border: 1px solid rgba(255, 255, 255, 0.5); margin: 20px auto 0 auto; padding: 0 40px; border-radius: 100px; font-weight: 300; font-size:14px; display:block; margin-bottom:20px;}
+    #mc_embed_signup .mc-field-group {padding-bottom:0;}
+    #mc_embed_signup .mc-field-group input {text-align:center; color: #ffffff; background: transparent; border: 0; border-radius: 0; border-bottom: 1px solid rgba(255, 255, 255, 0.5); box-shadow: none; padding:0; line-height: 34px;}
+    #mc_embed_signup #mc-embedded-subscribe-form input.mce_inline_error {border-bottom: 1px solid rgba(255, 255, 255, 0.5)!important;border:0;}
+    #mc_embed_signup #mc-embedded-subscribe-form div.mce_inline_error {display: block!important; background-color: transparent!important; color: $orange!important; text-align: center!important; font-weight: 300; margin:0; padding:10px 0 0 0;}
+    #mc_embed_signup div.response {margin: 0 0 20px; padding: 0; font-weight: normal; float: none; top: 0; z-index: 1; width: 100%; text-align: center; color: #737171;}
       ::-webkit-input-placeholder { color:rgba(255, 255, 255, 0.6); font-weight:300;}
       ::-moz-placeholder { color:rgba(255, 255, 255, 0.6); font-weight:300;}
       :-ms-input-placeholder { color:rgba(255, 255, 255, 0.6); font-weight:300;}
