--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -157,7 +157,7 @@
                 <form action="https://tailormadeafrica.us12.list-manage.com/subscribe/post?u=491ef6008d7bbb6987ce4ea3d&amp;id=16b6d8760e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                   <div id="mc_embed_signup_scroll">
                     <div class="mc-field-group">
-                      <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+                      <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Enter your email address">
                     </div>
                     <div id="mce-responses" class="clear">
                       <div class="response" id="mce-error-response" style="display:none"></div>
