--- a/app/views/refinery/_footer.html.erb
+++ b/app/views/refinery/_footer.html.erb
@@ -36,7 +36,7 @@
           </div>
           <textarea class="form-control" name="inquiry[message]" rows="3" placeholder="Message"></textarea>
           <div class="captcha"></div>
-          <input type="text" id="captcha" name="inquiry[captcha]" pattern="Y4X3B" class="form-control" placeholder="Retype Captcha*" required>
+          <input type="text" id="captcha" name="inquiry[captcha]" pattern="^.*\b(y4x3b|Y4X3B|y4x3B)\b.*$" class="form-control" placeholder="Retype Captcha*" required>
           
           <input class="btn btn-custom" type="submit" value="Send Message">
         </form>
