--- a/app/views/refinery/_footer.html.erb
+++ b/app/views/refinery/_footer.html.erb
@@ -12,7 +12,7 @@
           <!--<input type="text" name="inquiry[budget]" class="form-control" placeholder="Budget*" required>-->
           <div class="input-group">
             <span class="input-group-addon currency-label">Budget*</span>
-            <input type="text" name="inquiry[budget]" class="form-control currency-amount">
+            <input type="text" name="inquiry[budget]" class="form-control currency-amount" required>
             <div class="input-group-addon currency-addon">
               <select name="inquiry[currency]" class="currency-selector">
                 <option value="USD" selected>USD</option>
