--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -218,7 +218,8 @@ strong {font-weight:500;}
   form {background:rgba(0,0,0,0.7); padding:50px 90px;
     h1 {color:#ffffff; background:url(/assets/bg-h1.gif) bottom center no-repeat; padding-bottom:25px; margin:0;}
     p {margin:25px 0 10px 0;}
-    .form-control {color:#ffffff; background:transparent; border:0; border-radius:0; border-bottom:1px solid rgba(255,255,255,0.5); box-shadow:none; padding:25px 0; line-height:34px;}
+    .form-control {color:#ffffff; background:transparent; border:0; border-radius:0; border-bottom:1px solid rgba(255,255,255,0.5); box-shadow:none; padding:10px 0; line-height:34px;}
+    input.form-control  {height:55px;}
     .currency-selector {width: 100%; border: 0 !important; background: none; background-position: 48px 4px; background-repeat: no-repeat;}
     .currency-addon {width: 6em; text-align: left; position: relative; padding:0;}
     .currency-label {padding: 6px 30px 6px 0;}
@@ -226,7 +227,7 @@ strong {font-weight:500;}
     .input-group-addon {font-weight: 300; color: #fff; text-align: left; background-color: transparent; border:0; border-bottom: 1px solid rgba(255,255,255,0.5); border-radius: 0;
       option {color:#000000;}
     }
-    textarea {padding:15px 0!important;}
+    textarea {padding:15px 0!important; height:auto;}
     .option-group {padding:20px 0; border-bottom:1px solid rgba(255,255,255,0.5);
       label {font-weight:300; float:left; line-height:15px;  margin:0;}
       .option-input {-webkit-appearance: none; -moz-appearance: none; -ms-appearance: none; -o-appearance: none; appearance: none; position: relative; width: 15px; height: 15px; background:transparent; border:1px solid rgba(255,255,255,0.5); cursor: pointer; position: relative; z-index: 1000; padding:0; margin:0 15px 0 0; float:left;}
