--- a/app/views/refinery/_footer.html.erb
+++ b/app/views/refinery/_footer.html.erb
@@ -11,7 +11,7 @@
           <input type="text" name="inquiry[destination]" class="form-control" placeholder="Travel Destination*" required>
           <!--<input type="text" name="inquiry[budget]" class="form-control" placeholder="Budget*" required>-->
           <div class="input-group">
-            <span class="input-group-addon currency-label">Budget*</span>
+            <span class="input-group-addon currency-label">Budget per person*</span>
             <input type="text" name="inquiry[budget]" class="form-control currency-amount" required>
             <div class="input-group-addon currency-addon">
               <select name="inquiry[currency]" class="currency-selector">
