--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -19,7 +19,7 @@
       <div class="row">
         <div class="col-xs-12">
           <h1><%= @page.title %></h1>
-          <h2>Tailormade Africa is a specialist tailor-made safari and Africa travel company. We are the industry leaders in customer care and bespoke itinerary design.</h2>
+          <h2>Tailormade Australia is a specialist tailor-made safari and Australian travel company. We are the industry leaders in customer care and bespoke itinerary design.</h2>
           <div class="text">
             <%= raw @page.content_for(:body) %>
           </div>
@@ -77,7 +77,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-12">
-            <h1>Africa Experiences</h1>
+            <h1>Australia Experiences</h1>
             <p class="click">Please click on the options below</p>
           </div>
         </div>
@@ -121,7 +121,7 @@
         <div class="row">
           <div class="col-xs-12">
             <div class="experience-footer">
-              <h3 class="hidden-xs">Tailormade Africa has something for everyone.</h3>
+              <h3 class="hidden-xs">Tailormade Australia has something for everyone.</h3>
               <h2 class="hidden-xs">Speak to an expert at +44 7809 726266 (Clyde) or +44 7791 360170 (Rob)</h2>
               <a href="/activities" class="btn btn-custom">Browse All Experiences</a>
             </div>
@@ -135,7 +135,7 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
-          <h1>Why Tailormade Africa?</h1>
+          <h1>Why Tailormade Australia?</h1>
         </div>
       </div>
       <div class="row">
@@ -146,7 +146,7 @@
           <a id="myBtn" class="btn btn-custom">Newsletter Sign Up</a>
           <div id="myModal" class="modal">
             <div class="modal-content">
-              <h3>Receive News & Offers from Tailormade Africa</h3>
+              <h3>Receive News & Offers from Tailormade Australia</h3>
               <!-- Begin MailChimp Signup Form -->
               <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
               <style type="text/css">
